WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61708
Fix assertion seen when entering full screen mode for standalone video
https://bugs.webkit.org/show_bug.cgi?id=61708
Summary
Fix assertion seen when entering full screen mode for standalone video
Darin Adler
Reported
2011-05-29 13:10:16 PDT
Fix assertion seen when entering full screen mode for standalone video
Attachments
Patch
(1.33 KB, patch)
2011-05-29 13:11 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-05-29 13:11:02 PDT
Created
attachment 95296
[details]
Patch
Darin Adler
Comment 2
2011-05-29 13:12:07 PDT
Committed
r87643
: <
http://trac.webkit.org/changeset/87643
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug