2011-05-29  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        Fix assertion seen when entering full screen mode for standalone video
        https://bugs.webkit.org/show_bug.cgi?id=61708

        We don't currently have a way to make a regression test for this.

        * dom/Document.cpp:
        (WebCore::Document::setAnimatingFullScreen): Call scheduleForcedStyleRecalc,
        because scheduleStyleRecalc is intended to only be called when the style
        system itself detects recalc is needed.


git-svn-id: svn://svn.chromium.org/blink/trunk@87643 bbb929c8-8fbe-4397-9dbb-9b2b20218538