third_party/WebKit/Source/WebCore/dom/Document.cpp
@@ -5055,7 +5055,7 @@ void Document::setAnimatingFullScreen(bool flag)
 
     if (m_fullScreenElement && m_fullScreenElement->isDescendantOf(this)) {
         m_fullScreenElement->setNeedsStyleRecalc();
-        scheduleStyleRecalc();
+        scheduleForcedStyleRecalc();
     }
 
 #if USE(ACCELERATED_COMPOSITING)
